# Sorting-Visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/app/: App.hpp  AppContext.hpp  UserInterface.hpp
core/include/renderer/: ListManager.hpp  Renderer.hpp
core/include/sorting/: Sort.hpp  SortManager.hpp
core/include/sorting/sorts/: Bubble.hpp  Cocktail.hpp  Heap.hpp  Insertion.hpp  Merge.hpp  Quick.hpp  Selection.hpp
core/include/sorting/utils/: Color.hpp  Rect.hpp
core/include/sorts/: BubbleSort.hpp  CocktailSort.hpp  HeapSort.hpp  InsertionSort.hpp  MergeSort.hpp  QuickSort.hpp  RadixSort.hpp  SelectionSort.hpp
core/include/utils/: App.hpp  List.hpp  Rect.hpp  Sort.hpp  Utils.hpp
core/src/app/: App.cpp  UserInterface.cpp
core/src/renderer/: ListManager.cpp  Renderer.cpp
core/src/sorting/: Sort.cpp  SortManager.cpp
core/src/sorting/sorts/: Bubble.cpp  Cocktail.cpp  Heap.cpp  Insertion.cpp  Merge.cpp  Quick.cpp  Selection.cpp
core/src/sorting/utils/: Color.cpp
core/src/sorts/: BubbleSort.cpp  CocktailSort.cpp  HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  RadixSort.cpp  SelectionSort.cpp
core/src/utils/: List.cpp  Sort.cpp  Utils.cpp
src/: main.cpp
test/: CMakeLists.txt  CreateList.cc
test/include/: TestSort.hpp  TestUtils.hpp  Utils.hpp
test/sorts/: BubbleSort.cc  HeapSort.cc  MergeSort.cc  QuickSort.cc
test/src/sorting/sorts/: Bubble.cc  Cocktail.cc  Heap.cc  Insertion.cc  Merge.cc  Quick.cc  Selection.cc
test/src/sorting/utils/: Color.cc
test/src/sorts/: BubbleSort.cc  CocktailSort.cc  HeapSort.cc  InsertionSort.cc  MergeSort.cc  QuickSort.cc  RadixSort.cc  SelectionSort.cc
test/src/utils/: List.cc
test/utils/: List.cc
