CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
PROJECT(sorting-visualizer)

# SET C++ LANGUAGE STANDARD
SET(CXX_STANDARD 23)

# LINK SDL3 LIBRARY (TO ENTIRE PROJECT)
FIND_PACKAGE(SDL3 CONFIG REQUIRED)

# ADD SUBDIRECTORIES
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(external)

# CREATE EXECUTABLE
ADD_EXECUTABLE(main ./src/main.cpp)

# INCLUDE CORE TO TARGET
TARGET_INCLUDE_DIRECTORIES(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

# LINK LIBARIES TO TARGET
TARGET_LINK_LIBRARIES(main PRIVATE 
    core
    imgui
    SDL3::SDL3
)