CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
PROJECT(sorting-visualizer)

# SET LANGUAGE STANDARD
SET(CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# CUSTOM EXTERNAL DEPENDENCIES
SET(CUSTOM_CONFIG_PATH ${CMAKE_SOURCE_DIR}/cmake)
INCLUDE(${CUSTOM_CONFIG_PATH}/imgui-config.cmake)
INCLUDE(${CUSTOM_CONFIG_PATH}/googletest-config.cmake)

# MANAGED EXTERNAL DEPENDENCIES (VCPKG)
FIND_PACKAGE(SDL3 CONFIG REQUIRED)

# ADD SUBDIRECTORIES
ADD_SUBDIRECTORY(core)

# CREATE EXECUTABLE
SET(MAIN_FILE ./src/main.cpp)
ADD_EXECUTABLE(main ${MAIN_FILE})

# LINK LIBARIES TO TARGET
TARGET_LINK_LIBRARIES(main PRIVATE 
    core
    SDL3::SDL3
)

# HANDLE TESTING
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
ADD_TEST(NAME unit_tests COMMAND unit_tests)