# GET ALL SOURCE FILES
FILE(GLOB SOURCES src/*.cpp src/utils/*.cpp)

# ADD CORE LIBRARY
ADD_LIBRARY(core STATIC ${SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/utils)

# INCLUDE SDL3 IN CORE
TARGET_LINK_LIBRARIES(core PUBLIC SDL3::SDL3)