CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# GET ALL SOURCE FILES
FILE(GLOB_RECURSE CORE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

# ADD CORE LIBRARY
ADD_LIBRARY(core STATIC ${CORE_SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE CORE_INCLUDE_SUB_DIRECTORIES LIST_DIRECTORIES TRUE "${CMAKE_CURRENT_SOURCE_DIR}/include/*")
FOREACH(DIRECTORY ${CORE_INCLUDE_SUB_DIRECTORIES})
    IF(IS_DIRECTORY ${DIRECTORY})
        TARGET_INCLUDE_DIRECTORIES(core PUBLIC "${DIRECTORY}")
    ENDIF()
ENDFOREACH()

# LINK LIBRARIES TO CORE
TARGET_LINK_LIBRARIES(core PUBLIC
    imgui
    SDL3::SDL3
)