CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# GET ALL SOURCE FILES
FILE(GLOB_RECURSE TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)

# CREATE TESTING EXECUTABLE
ADD_EXECUTABLE(unit_tests ${TEST_SOURCES})

TARGET_INCLUDE_DIRECTORIES(unit_tests PRIVATE include)
TARGET_LINK_LIBRARIES(unit_tests PRIVATE
    core
    SDL3::SDL3
    googletest
    gtest_main
)

# AUTO DISCOVER TESTS
INCLUDE(GoogleTest)
GTEST_DISCOVER_TESTS(unit_tests)